--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "chart.js": "^4.4.9",
     "daisyui": "^5.0.35",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
