--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.35",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
